--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   "repository": {
     "type": "git"
   },
-  "keywords": ["NFT", "steganography", "SIGVANT", "EVM", "watermark", "EVM"],
+  "keywords": [
+    "NFT",
+    "steganography",
+    "SIGVANT",
+    "EVM",
+    "watermark",
+    "EVM"
+  ],
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.2",
-    "@openzeppelin/contracts": "^4.9.2",
+    "@openzeppelin/contracts": "^5.0.0",
     "@typechain/ethers-v6": "^0.4.3",
     "@typechain/hardhat": "^8.0.0",
     "@types/chai": "^4.3.5",
